<resources>
    <string name="app_name">Volleytest</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="button">Button</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="phone_number">Phone Number</string>
    <string name="phnumber">Enter Phone number</string>
    <string name="enter">Enter</string>
    <string name="username">User Name</string>
    <string name="dash_board">Dashboard</string>
    <string name="userprofile">Userprofile</string>
    <string name="username_gmail_com">username@gmail.com</string>
    <string name="todo">TODO</string>
    <string name="x">X</string>
    <string name="toldo">TODO</string>

</resources>
